<resources>
    <string name="app_name" translatable="false">DayOut</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="privacy_policy_underlined"><u>Privacy Policy</u></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="syrian_code" translatable="false">+963</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="does_not_match_password">Does Not Match Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account"><u>Already have an account? Login</u></string>
    <string name="name_does_not_match">Do Not Add Symbols or Numbers.</string>
    <string name="not_a_phone_number">Not a Phone Number</string>
    <string name="trips">Trips</string>
    <string name="followers">Followers</string>
    <string name="email">Email Address</string>
    <string name="following">Following</string>
    <string name="passenger">Passenger</string>
    <string name="done">Done</string>
    <string name="no_space">Do Not Start With Space</string>
    <string name="empty_field">Field is Empty</string>
    <string name="password_limit">At Least 6 Characters Allowed</string>
    <string name="email_optional">Email Address (Optional)</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="not_an_email_address">Not An Email Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="signup_success_message">Successfully SignedUp! Welcome to DayOut</string>
    <string name="canceling_reservation">Are you sure you want to cancel your reservation in this trip?</string>
    <string name="active">Active</string>
    <string-array name="trip_types">
        <item>Any</item>
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </string-array>
    <string name="notifications">Notifications</string>
    <string name="trip_rated">Trip Rated!</string>
    <string name="close">Close</string>
    <string name="filter_title">Title:</string>
    <string name="filter_price">Price:</string>
    <string name="filter_type">Type:</string>
    <string name="min">min:</string>
    <string name="max">max:</string>
    <string name="filter">Filter</string>
    <string name="no_active_trips">No Active Trips</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="privacy_policy_agreement">By continuing, you agree to the privacy policy</string>
    <string name="my_trips">My Trips</string>
    <string name="organizers">Organizers</string>
    <string name="posts">Posts</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="general">General</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="show_result">Show Result</string>
    <string name="remember_me">Remember Me</string>
    <string name="details">Details</string>
    <string name="stops">Stops</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="last_day_to_book">Last Day To Book</string>
    <string name="road_map">Road Map</string>
    <string name="rate_trip">Rate Trip</string>
    <string name="type">Type</string>
    <string name="passengers">Passengers</string>
    <string name="confirm">Confirm</string>
    <string name="english_language">English Language</string>
    <string name="trip_item_stops">Stops:</string>
    <string name="trip_item_date">Date:</string>
    <string name="trip_item_end_booking_date">End Booking Date:</string>
    <string name="trip_item_passengers">Passengers:</string>
    <string name="ask_logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="return_txt">Return</string>
    <string name="no">No</string>
    <string name="no_upcoming_trips">No Upcoming Trips</string>
    <string name="no_history">No History</string>
    <string name="no_notifications">No Notifications</string>
    <string name="change_settings">Change Setting</string>
    <string name="book_trip">Book Trip</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="find_organizer">Find an organizer</string>
    <string name="rate">Rate</string>
    <string name="rate_">Rate:</string>
    <string name="out_of_5" translatable="false">5/</string>
    <string name="biography">Biography</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Un Follow</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="reporting">Reporting</string>
    <string name="purpose_of_reporting">Purpose Of Reporting?</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="suggestion">Suggestion</string>
    <string name="send">Send</string>
    <string name="place_address">Place Address</string>
    <string name="place_description">Place Description</string>
    <string name="place_name_">Place Name:</string>
    <string name="any">Any</string>
    <string name="error_connection">Error Connection</string>
    <string name="unfollowed">Unfollowed</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="voted">Voted</string>
    <string name="reported">Reported</string>
    <string name="booking_canceled">Booking Canceled</string>
    <string name="no_policy">No Privacy Policy</string>
    <string name="empty_search_field">Search field is empty</string>
    <string name="at_least_three">3 letters at least</string>
    <string name="you_are_following">Following</string>
    <string name="at_least_one_passenger">At least one passenger allowed</string>
    <string name="trip_booked">Trip Booked Successfully!</string>
    <string name="active_cap">ACTIVE</string>
    <string name="upcoming_cap">UPCOMING</string>
    <string name="history_cap">HISTORY</string>
    <string name="required">Required</string>
    <string name="polls">Polls</string>
    <string name="votes">Votes</string>
    <string name="vote">Vote</string>
    <string name="description">Description</string>
    <string name="no_privacy_policy">There is no privacy police</string>
    <string name="contact_us_text">Hi We are a group of Young man who know to manage and organize trips if you would like to know more about our work or process feel free to get in touch</string>
    <string name="email_contact_inof">Email :</string>
    <string name="forget_password"><u>Forget Password</u></string>
    <string name="please_enter_your_verification_code_and_new_password">Please enter your verification code and new password</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="expired_date_not_selected">Expired Date not selected</string>
    <string name="there_is_no_favorite_places">There is no Favorite places</string>
    <string name="presmission_deny">You have to login or sign up to continue</string>
    <string name="booking_nots">Enter names of passengers you are booking for. Please consider including your name if you are booking for yourself as well.</string>

</resources>