<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_700"
    android:elevation="9dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_app_logo_light" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/off_white"
        android:textSize="@dimen/_30ssp" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_275sdp"
        android:layout_height="@dimen/_375sdp"
        android:layout_gravity="center"
        android:backgroundTint="@color/rose"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_10sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/uploadImage_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:fontFamily="@font/acme"
                        android:text="@string/upload_profile_image"
                        android:textSize="@dimen/_14sdp" />

                    <ImageButton
                        android:id="@+id/signup_upload_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight=".4"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/image_icon" />

                </LinearLayout>

                <View
                    android:id="@+id/first_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/signup_profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/signup_profile_image"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:outlineAmbientShadowColor="#CFCFCF"
                        app:civ_border_color="@color/gray"
                        app:civ_border_width="@dimen/_2sdp" />

                    <ImageButton
                        android:id="@+id/signup_edit_profile_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/edit_icon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/acme"
                    android:text="@string/username"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/signup_username_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:fontFamily="@font/acme"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/orange_700"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/acme"
                    android:text="@string/password"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/signup_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/acme"
                    android:text="@string/confirm_password"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/signup_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/acme"
                    android:text="Gender"
                    android:textSize="@dimen/_14sdp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/signup_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:fontFamily="@font/acme"
                        android:text="@string/male"
                        android:textColor="@color/orange_700"
                        android:textSize="@dimen/_13ssp" />

                    <RadioButton
                        android:id="@+id/signup_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:fontFamily="@font/acme"
                        android:text="@string/female"
                        android:textColor="@color/orange_700"
                        android:textSize="@dimen/_13ssp" />
                </RadioGroup>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/acme"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:gravity="center"
                        android:text="@string/syrian_code"
                        android:textSize="@dimen/_13ssp" />

                    <EditText
                        android:id="@+id/phoneNumberField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:backgroundTint="#FFFFFF"
                        android:ems="10"
                        android:hint="09xxxxxxxx"
                        android:inputType="phone"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:backgroundTint="@color/orange_700"
                    android:fontFamily="@font/acme"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="Already have an acount? Login"
        android:textColor="@color/off_white"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>